[gd_scene load_steps=5 format=3 uid="uid://c8n7y2k4m5qrp"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Vehicle.gd" id="2"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="3"]
[ext_resource type="Texture2D" path="res://assets/vehicle_car.png" id="4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Terrain" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(200, 200)
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4")

[node name="FrontWheel" type="Sprite2D" parent="Player"]
position = Vector2(15, 15)
texture = ExtResource("4")

[node name="RearWheel" type="Sprite2D" parent="Player"]
position = Vector2(-15, 15)
texture = ExtResource("4")

[node name="FrontSpring" type="Sprite2D" parent="Player"]
position = Vector2(15, 0)
texture = ExtResource("4")

[node name="RearSpring" type="Sprite2D" parent="Player"]
position = Vector2(-15, 0)
texture = ExtResource("4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -100)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="DistanceLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -70.0
text = "Distance: 0m"

[node name="CoinsLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 200.0
offset_bottom = -40.0
text = "Coins: 0"

[node name="FuelBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = -20.0
max_value = 100.0
value = 100.0

[node name="SpeedLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
text = "Speed: 0"

[node name="MobileControls" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GasButton" type="Button" parent="HUD/MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
text = "GAS"

[node name="BrakeButton" type="Button" parent="HUD/MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = -150.0
offset_bottom = -50.0
text = "BRAKE"

[node name="LeftButton" type="Button" parent="HUD/MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
offset_right = -150.0
offset_bottom = -150.0
text = "<"

[node name="RightButton" type="Button" parent="HUD/MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = -150.0
text = ">"